Add appveyor and badges
Add cellviz3d in suggests
 Changes to be committed:
	modified:   .Rbuildignore
	modified:   .travis.yml
	modified:   DESCRIPTION
	modified:   README.Rmd
	modified:   README.md
	new file:   appveyor.yml
	modified:   vignettes/vignette_basics.Rmd
	modified:   vignettes/vignette_time_series.Rmd

--- a/vignettes/vignette_basics.Rmd
+++ b/vignettes/vignette_basics.Rmd
@@ -36,6 +36,7 @@ library(glue)
 library(RColorBrewer)
 ```
 
+To install {cellviz3d}:
 ```{r libdev, warning = FALSE, message = FALSE, eval=FALSE}
 # devtools::install_github("marionlouveaux/cellviz3d")
 library(cellviz3d)
