--- a/README.Rmd
+++ b/README.Rmd
@@ -50,7 +50,14 @@ See full documentation created with {pkgdown} at https://marionlouveaux.github.i
 Two vignettes are available in the package. You can have access to the vignettes if you installed the package using `build_vignettes = TRUE`.
 
 - `vignette("vignette_basics", package = "mgx2r")`
-- `vignette("vignette_time_series", package = "mgx2r")`
+- `vignette("vignette_time_series", package = "mgx2r")`    
+
+To open the Rmd files used to build vignettes: 
+
+```{r, eval=FALSE}
+file.edit(system.file(file.path("doc", "vignette_basics.Rmd"), package = "mgx2r"))
+file.edit(system.file(file.path("doc", "vignette_time_series.Rmd"), package = "mgx2r"))
+```
 
 ## Example
 ### Read dataset
